| Bug #1860 | crash when doing multi-table-updates with constants in where-clause | ||
|---|---|---|---|
| Submitted: | 17 Nov 2003 5:03 | Modified: | 13 Dec 2003 14:09 |
| Reporter: | Thomas Mayer | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S1 (Critical) |
| Version: | 4.0.16 | OS: | Linux (Suse Linux 8.2) |
| Assigned to: | Igor Babaev | CPU Architecture: | Any |
[17 Nov 2003 5:03]
Thomas Mayer
[13 Dec 2003 14:09]
Igor Babaev
Fixed in 4.0.17 (in sql_update.cc). A similar bug I found for multi-table deletes. The fix for deletes was a slightly more complicated, as required to introduce a new member 'found' in the class multi_delete - similar to that in multi-update (see sql_class.h, sql_delete.cc). Thanks to Sinisa who propmted to use the found member of multi_update.
