Many files:   Fixed a bug causing a crash for multi-update/multi-delete   with impossible where (bug #1860).